--- a/package.json
+++ b/package.json
@@ -72,6 +72,11 @@
     "babel-preset-react": "^6.11.1",
     "chokidar-cli": "^1.2.0",
     "clean-css": "^3.4.19",
+    "eslint": "^3.7.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^2.0.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
     "json": "^9.0.4",
     "mocha": "^3.0.1",
     "mustache": "^2.2.1",
@@ -82,6 +87,11 @@
   },
   "dependencies": {
     "express": "^4.14.0",
-    "isomorphic-fetch": "^2.2.1"
+    "isomorphic-fetch": "^2.2.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "redux": "^3.6.0"
   }
 }
